--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,29 +28,31 @@ services:
     networks:
       - app-network
 
-  # dokumen-service:
-  #   build: ./dokumen-service
-  #   environment:
-  #     - DATABASE_URL=${DB_URL}
-  #     - DATABASE_SCHEMA=dokumen
-  #     - TZ=Asia/Jakarta
-  #   volumes:
-  #     - ./common:/app/common
-  #     - ./.env:/.env
-  #     - ./dokumen-service:/app
-  #     - /go/pkg/mod:/go/pkg/mod
-  #     - "C:/UploadedFile:/app/UploadedFile"
-  #   ports:
-  #     - "8081:8081"
-  #   depends_on:
-  #     - db
-  #   networks:
-  #     - app-network
-  #   healthcheck:
-  #     test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 5
+  dokumen-service:
+    build: ./dokumen-service
+    environment:
+      - DATABASE_URL=${DB_URL}
+      - DATABASE_SCHEMA=dokumen
+      - TZ=Asia/Jakarta
+    volumes:
+      - ./common:/app/common
+      - ./.env:/.env
+      - ./dokumen-service:/app
+      - /go/pkg/mod:/go/pkg/mod
+      - "C:/UploadedFile:/app/UploadedFile"
+      - /etc/localtime:/etc/localtime:ro
+      - /usr/share/zoneinfo:/usr/share/zoneinfo:ro
+    ports:
+      - "8081:8081"
+    depends_on:
+      - db
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   informasi-service:
     build: ./informasi-service
@@ -128,52 +130,56 @@ services:
       timeout: 10s
       retries: 5
 
-  # weeklytimeline-service:
-  #   build: ./weeklytimeline-service
-  #   environment:
-  #     - DATABASE_URL=${DB_URL}
-  #     - DATABASE_SCHEMA=weekly_timeline
-  #     - TZ=Asia/Jakarta
-  #   volumes:
-  #     - ./common:/app/common
-  #     - ./.env:/.env
-  #     - /go/pkg/mod:/go/pkg/mod
-  #     - ./weeklytimeline-service:/app
-  #   ports:
-  #     - "8085:8085"
-  #   depends_on:
-  #     - db
-  #   networks:
-  #     - app-network
-  #   healthcheck:
-  #     test: ["CMD", "curl", "-f", "http://localhost:8085/health"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 5
+  weeklytimeline-service:
+    build: ./weeklytimeline-service
+    environment:
+      - DATABASE_URL=${DB_URL}
+      - DATABASE_SCHEMA=weekly_timeline
+      - TZ=Asia/Jakarta
+    volumes:
+      - ./common:/app/common
+      - ./.env:/.env
+      - /go/pkg/mod:/go/pkg/mod
+      - ./weeklytimeline-service:/app
+      - /etc/localtime:/etc/localtime:ro
+      - /usr/share/zoneinfo:/usr/share/zoneinfo:ro
+    ports:
+      - "8085:8085"
+    depends_on:
+      - db
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8085/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
-  # project-service:
-  #   build: ./project-service
-  #   environment:
-  #     - DATABASE_URL=${DB_URL}
-  #     - DATABASE_SCHEMA=project
-  #     - TZ=Asia/Jakarta
-  #   volumes:
-  #     - ./common:/app/common
-  #     - ./.env:/.env
-  #     - /go/pkg/mod:/go/pkg/mod
-  #     - ./project-service:/app
-  #     - "C:/UploadedFile:/app/UploadedFile"
-  #   ports:
-  #     - "8086:8086"
-  #   depends_on:
-  #     - db
-  #   networks:
-  #     - app-network
-  #   healthcheck:
-  #     test: ["CMD", "curl", "-f", "http://localhost:8086/health"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 5
+  project-service:
+    build: ./project-service
+    environment:
+      - DATABASE_URL=${DB_URL}
+      - DATABASE_SCHEMA=project
+      - TZ=Asia/Jakarta
+    volumes:
+      - ./common:/app/common
+      - ./.env:/.env
+      - /go/pkg/mod:/go/pkg/mod
+      - ./project-service:/app
+      - "C:/UploadedFile:/app/UploadedFile"
+      - /etc/localtime:/etc/localtime:ro
+      - /usr/share/zoneinfo:/usr/share/zoneinfo:ro
+    ports:
+      - "8086:8086"
+    depends_on:
+      - db
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8086/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 volumes:
   postgres_data:
